2.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: votingapp-ingress
  annotations:
    #kubernetes.io/ingress.class: alb - Deprecated
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    #Make sure our SSL Cert and Cluster is in same AWS Account.
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-1:051826694723:certificate/bc924a80-c1d0-4cc7-9c54-04bb5b5781d9'
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - "vote.crossbow54.xyz"
    - "result.crossbow54.xyz"
    - "www.crossbow54.xyz"
    secretName: my-tls-secret-nk
  rules:
  - host: vote.crossbow54.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vote
              port:
                number: 80
  - host: result.crossbow54.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: result
              port:
                number: 80
  - host: www.crossbow54.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vote
              port:
                number: 80
